--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ checkstyle {
 sonarqube {
     properties {
         property "sonar.sourceEncoding", "UTF-8"
-                property "sonar.projectName", "Gradle-JavaWebApp-3"
+                property "sonar.projectName", "Gradle-JavaWebApp"
                 property "sonar.host.url", "http://172.31.51.213:9000"
-                property "sonar.login", "ed7f1ae74cf8b693cadbd47043d4b9ed5ef50913"
+                property "sonar.login", "f662ad20da3dd38a1b0d96dd15f558756fc434af"
     }
 }
 
